--- a/src/public/index.html
+++ b/src/public/index.html
@@ -11,8 +11,6 @@
 </head>
 <body>
     
-    
-    <script src="main.js"></script>
-    <script src="package.json"></script>
+    <script src="../app.js"></script>
 </body>
 </html>
